<resources>

    <string name="app_name">CenteralPerk</string>
    <string name="email">Email</string>
    <string name="email_or_username">E-mail or UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="please_wait">Please wait</string>
    <string name="name">Name</string>
    <string name="user_name">UserName</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>