<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.fragment.login.LoginFragment">

    <data>

        <variable
            name="data"
            type="com.example.centeralperk.presentation.fragment.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_20sdp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvEmail"
                    style="@style/input_card_view_style"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="@dimen/_16sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            style="@style/edit_text_style"
                            android:hint="@string/email_or_username"
                            android:inputType="textEmailAddress"
                            android:text="@={data.emailOrUserName}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvPassword"
                    style="@style/input_card_view_style"
                    android:layout_marginTop="@dimen/_18sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cvEmail">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="@dimen/_16sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            style="@style/edit_text_style"
                            android:layout_width="0dp"
                            android:hint="@string/password"
                            android:maxLength="30"
                            android:inputType="textPassword"
                            android:text="@={data.password}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/ivVisibility"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivVisibility"
                            android:layout_width="@dimen/_19sdp"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@id/etPassword"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/etPassword" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    style="@style/button_style"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cvPassword" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/text_view_style"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/forgot_password_"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSignUp"
                    style="@style/text_view_style"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
